<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gold"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/dice1"
            style="@style/dice_style"
            android:contentDescription="@string/dice_number_1"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/dice2"
            style="@style/dice_style"
            android:contentDescription="@string/dice_number_2"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/dice3"
            style="@style/dice_style"
            android:contentDescription="@string/dice_number_3"
            tools:srcCompat="@tools:sample/avatars" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageView
            android:id="@+id/dice4"
            style="@style/dice_style"
            android:contentDescription="@string/dice_number_4"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/dice5"
            style="@style/dice_style"
            android:contentDescription="@string/dice_number_5"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/dice6"
            style="@style/dice_style"
            android:contentDescription="@string/dice_number_6"
            tools:srcCompat="@tools:sample/avatars" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_roll"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/roll"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:minWidth="0dp"
        android:minHeight="70dp"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <ImageButton
        android:id="@+id/btn_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/button_to_see_history_activity"
        android:minWidth="70dp"
        android:minHeight="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_roll"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_baseline_history_24" />

</androidx.constraintlayout.widget.ConstraintLayout>